tests/bad/const_expr_var.oc
/// fail: Cannot use a non-constant value in a constant expression

let x: i32 = 0
const y: i32 = x + 1

def main() {
    y = 5
}